fix style on mobile

--- a/src/converter.css
+++ b/src/converter.css
@@ -64,6 +64,8 @@ select {
     padding: 10px;
     border: none;
     background-color: rgba(255, 255, 255, 0.729);
+    border-radius: none;
+    color: black;
 }
 
 
@@ -74,6 +76,7 @@ select {
     box-shadow: 0px 5px 7px rgba(0, 0, 0, 0.125);
     background-color: rgb(255, 205, 68);
     cursor: pointer;
+    color: black;
 }
 
 .btn:hover {
